finished with html, add TS logic, add routing

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,21 @@
-<p>footer works!</p>
+<footer class="footer">
+  <div class="footer-wrapper">
+  <div class="contacts">
+    <div class="contacts__tel">
+      +7 800 100-32-00
+    </div>
+    <div class="contacts__info">
+      для бесплатных звонков <br>на территории России
+    </div>
+  </div>
+  <div class="contacts">
+    <div class="contacts__tel">
+      +7 495 777-41-50
+    </div>
+    <div class="contacts__info">
+      для звонков из любой точки мира <br>(по тарифам вашего оператора связи)
+    </div>
+  </div>
+  <div class="copyright">&copy; ТрансКаптиалБанк, {{ currentYear }}</div>
+</div>
+</footer>
