--- a/src/app/components/header/header.component.sass
+++ b/src/app/components/header/header.component.sass
@@ -1,6 +1,6 @@
 @import '../../utilities/variables'
 
-:host-context
+\:host
   width: 100%
 
 .header
@@ -24,7 +24,7 @@
   height: 100%
   position: relative
   cursor: pointer
-  
+
 .nav-menu-button__elem
   width: 19px
   height: 1.6px
