--- a/src/app/components/page-content/page-content.component.sass
+++ b/src/app/components/page-content/page-content.component.sass
@@ -1,6 +1,6 @@
 @import '../../utilities/variables'
 
-:host-context
+\:host
   width: 100%
   display: flex
 
@@ -17,3 +17,5 @@
   line-height: 38px
   color: $text-color
   user-select: none
+  margin-top: 22px
+
