add check-account function, finish up with css

--- a/src/app/components/footer/footer.component.sass
+++ b/src/app/components/footer/footer.component.sass
@@ -1,11 +1,14 @@
 @import '../../utilities/variables'
 
 \:host
-  width: 100%
+  width: inherit
+  position: fixed
+  bottom: 0
 
 .footer
   height: 212px
   background-color: $secondary-color
+  font-family: $font
 
 .footer-wrapper
   display: flex
@@ -24,7 +27,7 @@
   font-weight: bold
   font-size: 14px
   line-height: 17px
-  margin-bottom: 5px
+  margin-bottom: 3px
 
 .contacts__info
   font-weight: 350
