--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,10 +1,12 @@
+\:host
+
 .app
   width: 100%
   height: 100%
   display: flex
   flex-direction: row
   justify-content: center
-  align-items: center
+  align-items: flex-start
 
 .app-wrapper
   width: 320px
@@ -12,3 +14,4 @@
   display: flex
   flex-direction: column
   align-items: center
+  position: relative
