--- a/src/app/components/form/form.component.sass
+++ b/src/app/components/form/form.component.sass
@@ -2,7 +2,7 @@
 
 .form
   width: 284px
-  height: 360px
+  min-height: 360px
   margin: 0 auto
   background-color: $secondary-color
   display: flex
@@ -11,11 +11,12 @@
   border-radius: 30px
   box-sizing: border-box
   margin-top: 24px
+  margin-bottom: 231px
 
 .form-inputs
   display: flex
   flex-direction: column
-  align-items: flex-start
+  align-items: center
 
 textarea:focus,
 input:focus
@@ -35,6 +36,7 @@ input:focus
 .form-buttons__about-service,
 .form-buttons__check-account
   width: 50%
+  height: 40px
   border-radius: 100px 100px 100px 100px
   border: none
   background-color: $primary-color
@@ -60,6 +62,7 @@ input:focus
   height: 52px
   border: 1px solid $border-color
   color: $text-color
+  font-family: $font
   font-weight: 350
   font-size: 14px
   line-height: 17px
@@ -115,16 +118,19 @@ input::-webkit-inner-spin-button
   font-size: 12px
   line-height: 14px
   color: $text-color
+  font-family: $font
 
 .form-inputs__label_underlined
   color: $tertialy-color
   border-bottom: 1px solid $tertialy-color
   padding-bottom: 0.3px
   cursor: pointer
+  font-family: $font
 
 .form-input-checkbox
   display: flex
   flex-direction: row
+  margin-left: -90px
 
 .check-button
   margin-top: 30px
@@ -136,20 +142,24 @@ input::-webkit-inner-spin-button
 .mat-checkbox
   margin-bottom: 20px
 
-.error
+.error,
+.success
   font-weight: 350
   font-size: 12px
   line-height: 14px
   font-family: $font
   color: $error-color
   margin-top: 7px
-  border: 1px solid red
   width: 100%
   height: 17px
-  visibility: hidden
+  margin-left: -20px
 
-.show_error
-  visibility: visible
+.success
+  color: green
+
+.result
+  width: 200px
+  height: 25px
 
 .check-button
   width: 248px
@@ -165,9 +175,31 @@ input::-webkit-inner-spin-button
   transition: background 1s
   margin: 0 auto
   margin-top: 15px
+  margin-bottom: 15px
+  font-family: $font
   &:hover
     background: $button-color__hovered
   &:disabled
     background: $border-color
     cursor: default
+
+.about-service
+  padding: 0 20px 20px 20px
+  font-family: $font
+  color: $text-color
+
+.about-service__el
+  font-family: $font
+  list-style-type: none
+  padding-bottom: 10px
+  user-select: none
+
+ul
+  margin: 0
+
+.terms
+  display: flex
+  padding: 0 20px 0 20px
+  box-sizing: border-box
+  font-family: $font
 
