refactoring, add more comments

--- a/src/app/components/form/form.component.sass
+++ b/src/app/components/form/form.component.sass
@@ -154,6 +154,9 @@ input::-webkit-inner-spin-button
   height: 17px
   margin-left: -20px
 
+.red
+  color: $error-color
+
 .success
   color: green
 
@@ -172,7 +175,6 @@ input::-webkit-inner-spin-button
   font-family: $font
   color: $primary-color
   cursor: pointer
-  transition: background 1s
   margin: 0 auto
   margin-top: 15px
   margin-bottom: 15px
