--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -3,14 +3,14 @@
     <a
       routerLink="/about-service"
       class="form-buttons__about-service"
-      [ngClass]="{ button_active: isButtonValue == 'aboutService' }"
+      [ngClass]="{ button_active: currentButton == 'aboutService' }"
     >
       О сервисе
     </a>
     <a
       routerLink="/"
       class="form-buttons__check-account"
-      [ngClass]="{ button_active: isButtonValue == 'checkAcc' }"
+      [ngClass]="{ button_active: currentButton == 'checkAcc' }"
     >
       Проверить <br />счет
     </a>
@@ -18,7 +18,7 @@
 
   <form
     class="form-inputs"
-    *ngIf="isButtonValue === 'checkAcc'; else aboutService"
+    *ngIf="currentButton === 'checkAcc'; else aboutService"
   >
     <div class="form-input-wrapper-1">
       <input
@@ -35,7 +35,7 @@
         type="text"
         class="form-inputs__settlement-account"
         name="set_acc"
-        [(ngModel)]="setAccValue"
+        [(ngModel)]="rsValue"
         (ngModelChange)="changeHandler()"
         autocomplete="off"
       />
@@ -53,7 +53,7 @@
 
     <div class="form-input-checkbox">
       <mat-checkbox name="myCheckbox" [(ngModel)]="checked">
-        <label for="form-inputs__checkbox" class="form-inputs__label"
+        <label for="form-inputs__checkbox" class="form-inputs__label" [ngClass]="{'red' : !isCheckboxChecked}"
           >Согласен c<span
             class="form-inputs__label_underlined"
             (click)="changeCheckboxVal()"
